fix: size overflow on pricing buttons

--- a/public/styles.css
+++ b/public/styles.css
@@ -44,7 +44,6 @@
   --radius-xl: 0.75rem;
   --radius-2xl: 1rem;
   --animate-spin: spin 1s linear infinite;
-  --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
   --animate-bounce: bounce 1s infinite;
   --blur-sm: 8px;
   --blur-md: 12px;
@@ -251,6 +250,9 @@
 }
 .ml-\[calc\(50vw-1rem\)\] {
   margin-left: calc(50vw - 1rem);
+}
+.box-border {
+  box-sizing: border-box;
 }
 .block {
   display: block;
@@ -1883,11 +1885,6 @@ img {
 @keyframes spin {
   to {
     transform: rotate(360deg);
-  }
-}
-@keyframes pulse {
-  50% {
-    opacity: 0.5;
   }
 }
 @keyframes bounce {
